[metadata]
name = probes
version = attr: probes.__version__
author = attr: probes.__author__
author-email = attr: probes.__email__
url = attr: probes.__url__
project_urls = 
summary = attr: probes.__doc__
description-file = file: README.rst
long_description = file: README.rst
description-content-type = text/x-rst; charset=UTF-8
license = attr: probes.__license__

requires-dist =
    setuptools

classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: GPU :: NVIDIA CUDA
    Environment :: MacOS X
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP
    Topic :: System :: Networking
    Topic :: System :: Benchmark

keywords = benchmark, monitoring


[options]
zip_safe = False
include_package_data = True
package_dir=
packages=find:
    
install_requires = psutil

test_suite = probes.tests
tests_require =

[options.extras_require]
nvidia = pynvml


[options.entry_points]
console_scripts =
    probes = probes.main:main


[coverage:run]
omit = probes/tests/*
branch = True
source = probes

[coverage:report]
show_missing = true
exclude_lines =
    noqa
    NotImplemented
